# rendy

./: .gitignore  Cargo.toml  README.md
assets/prefab/: rendy_example_scene.ron
config/: display.ron
src/: main.rs  prefab_data.rs
